@@ -7,7 +7,28 @@ config NETUTILS_WEBSERVER
 	bool "uIP web server"
 	default n
 	---help---
-		Enable support for the uIP web server.
+		Enable support for the uIP web server.  This tiny web server was
+		from uIP 1.0, but has undergone many changes.  It is, however,
+		still referred to as the "uIP" web server.
 
 if NETUTILS_WEBSERVER
+
+config NETUTILS_HTTPD_SCRIPT_DISABLE
+	bool "Disable %! scripting"
+	default n
+	---help---
+		This option, if selected, will elide the %! scripting
+
+config NETUTILS_HTTPD_SERVERHEADER_DISABLE, which elides the Server: header
+	bool "Disabled the SERVER header"
+	default n
+	---help---
+		This option, if selected, will elide the Server: header
+
+config NETUTILS_HTTPD_MMAP
+	bool "File mmap-ing"
+	default n
+	---help---
+		Replaces standard uIP server file open operations with mmap-ing operations.
+
 endif
